--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,118 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "projectname": {
+      "projectType": "application",
+      "schematics": {
+        "@schematics/angular:component": {
+          "inlineTemplate": true,
+          "inlineStyle": true
+        }
+      },
+      "root": "projects/projectname",
+      "sourceRoot": "projects/projectname/src",
+      "prefix": "defaultprefixname",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/projectname",
+            "index": "projects/projectname/src/index.html",
+            "browser": "projects/projectname/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "projects/projectname/tsconfig.app.json",
+            "assets": [
+              "projects/projectname/src/favicon.ico",
+              "projects/projectname/src/assets"
+            ],
+            "styles": [
+              "projects/projectname/src/styles.css"
+            ],
+            "scripts": []
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kb",
+                  "maximumError": "4kb"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "fileReplacements": [
+                {
+                  "replace": "projects/projectname/src/environments/environment.ts",
+                  "with": "projects/projectname/src/environments/environment.development.ts"
+                }
+              ]
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "projectname:build:production"
+            },
+            "development": {
+              "buildTarget": "projectname:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n",
+          "options": {
+            "buildTarget": "projectname:build"
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "projects/projectname/tsconfig.spec.json",
+            "assets": [
+              "projects/projectname/src/favicon.ico",
+              "projects/projectname/src/assets"
+            ],
+            "styles": [
+              "projects/projectname/src/styles.css"
+            ],
+            "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "projects/projectname/**/*.ts",
+              "projects/projectname/**/*.html"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "cli": {
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
